--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,24 @@
 :root {
+  --clr-primary-100: hsl(26, 100%, 55%);
+  --clr-primary-200: hsl(25, 100%, 94%);
+  --clr-neutral-100: hsl(220, 13%, 13%);
+  --clr-neutral-200: hsl(219, 9%, 45%);
+  --clr-neutral-300: hsl(220, 14%, 75%);
+  --clr-neutral-400: hsl(223, 64%, 98%);
+  --clr-neutral-500: hsl(0, 0%, 100%);
+  --clr-neutral-600: hsla(0, 3%, 7%, 0.726);
+  --fw-100: ;
+  --fw-200: ;
+  --fw-300: 400;
+  --fw-400: 700;
 }
+
+/* t-accent-5--:orange
+  t-accent-400: black
+  t-accent-300: grey
+  t-accent-200: whitishgray
+  t-accent-100: white
+ */
 
 /*---- CSS Resets -----*/
 *,
@@ -25,7 +44,7 @@ header::after {
   width: 90%;
   height: 1px;
   display: block;
-  background-color: red;
+  background-color: var(--clr-neutral-300);
   margin: 0 auto;
 }
 
@@ -93,6 +112,56 @@ button {
   overflow-x: hidden;
 }
 
+.fw-100 {
+}
+
+.fw-200 {
+}
+
+.fw-300 {
+  font-weight: var(--fw-300);
+}
+
+.fw-400 {
+  font-weight: var(--fw-400);
+}
+
+.text-accent-100 {
+  color: var(--clr-neutral-500);
+}
+
+.text-accent-200 {
+  color: var(--clr-neutral-300);
+}
+
+.text-accent-300 {
+  color: var(--clr-neutral-200);
+}
+
+.text-accent-400 {
+  color: var(--clr-neutral-100);
+}
+
+.text-accent-500 {
+  color: var(--clr-primary-100);
+}
+
+.bg-white {
+  background-color: var(--clr-neutral-500);
+}
+
+.bg-orange {
+  background-color: var(--clr-primary-100);
+}
+
+.bg-light-orange {
+  background-color: var(--clr-primary-200);
+}
+
+.bg-super-light-grey {
+  background-color: var(--clr-neutral-400);
+}
+
 /* ------------------------------ */
 
 /*--- Components Styling--- */
@@ -109,6 +178,7 @@ button {
   background-image: url("../public/images/icon-menu.svg");
   background-repeat: no-repeat;
   background-color: transparent;
+  z-index: 20;
 }
 
 .navbar__link {
@@ -120,9 +190,12 @@ button {
   align-items: center;
 }
 
-.cart-count {
-  top: -10px;
-  right: 0;
+.user__cart-count {
+  padding-inline: 0.5em;
+  border-radius: 160px;
+  top: -0.6rem;
+  right: -0.5rem;
+  font-size: 13px;
 }
 
 .user__cart,
@@ -132,7 +205,7 @@ button {
 
 .main {
   margin-block-start: 2rem;
-  grid-template-columns: repeat(2, minmax(200px, 400px));
+  grid-template-columns: repeat(2, minmax(12.5rem, 25rem));
   justify-self: center;
   align-self: center;
   column-gap: 4rem;
@@ -149,29 +222,107 @@ button {
   justify-content: space-between;
 }
 
-.lightbox > .lrg-img {
-  /* width: 400px; */
+.lrg-img {
+  transition-property: transform;
+  transition-duration: 500ms;
+  cursor: pointer;
 }
 
+/* ----Slibebox---- */
 .slide-btn {
-  width: 20px;
-  aspect-ratio: 2 / 1;
-  background-color: red;
+  width: 30px;
+  aspect-ratio: 1 / 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: red; */
   position: absolute;
   top: 50%;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 10;
+  /* transform: translateY(-100%); */
+  /* background-repeat: no-repeat; */
 }
 
 .prev-btn {
-
+  left: 0;
+  transform: translateX(-50%);
+  /* background-image: url('../images/icon-previous.svg') */
 }
 
 .next-btn {
-
+  /* background-image: url('../images/icon-next.svg'); */
+  transform: translateX(50%);
+  right: 0;
 }
 
 .main__mobile-image-box {
   display: none;
 }
+/* ------------------------ */
+
+/* ---Lightbox---- */
+.lightbox {
+  z-index: 999;
+  width: 25rem;
+  outline: 99999px solid var(--clr-neutral-600);
+  background-color: var(--clr-neutral-600);
+}
+
+.lightbox__close-btn {
+  aspect-ratio: 2 / 1;
+  background-color: transparent;
+
+  top: 0;
+  right: 0;
+  transform: translateY(-150%);
+  cursor: pointer;
+}
+
+.lightbox__thumbnails {
+  width: 100%;
+  justify-content: space-between;
+}
+/* ----------- */
+
+/* ----Cart styling--- */
+.cart {
+  top: 90%;
+  padding: 1em 2em;
+  width: fit-content;
+  right: 10%;
+}
+
+.add-to-cart {
+  flex-grow: 2;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.item-counter {
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
+.cart {
+  
+}
+
+.cart__checkout-btn {
+  width: 100%;
+}
+
+.add-to-cart,
+.item-counter,
+.cart__checkout-btn {
+  padding: 0.5em 1em;
+  cursor: pointer;
+}
+
+
+/* -------- */
 
 /* ------------------------ */
 
@@ -182,22 +333,30 @@ button {
 
   .navbar__toggler {
     display: block;
-    z-index: 99;
+    z-index: 20;
   }
 
   .navbar__menu {
     position: absolute;
     flex-direction: column;
     inset: 0 50% 0 0;
-    background-color: red;
     padding-block-start: 6em;
     padding-inline-start: 6%;
     transition-property: transform;
     transition-duration: 200ms;
+    z-index: 11;
   }
 
   .navbar__menu[ismobile="false"] {
-    transform: translateX(-102%);
+    transform: translateX(-120%);
+  }
+
+  .navbar__menu[ismobile="true"] {
+    outline: 50vw solid var(--clr-neutral-600);
+  }
+  .cart {
+    width: 90%;
+    right: 5%;
   }
 
   .menu-close {
@@ -214,6 +373,18 @@ button {
   }
 
   .main__desktop-image-box {
+    display: none;
+  }
+
+  .next-btn {
+    transform: translateX(-100%);
+  }
+
+  .prev-btn {
+    transform: translateX(100%);
+  }
+
+  .lightbox {
     display: none;
   }
 }
