--- a/CSS/index.css
+++ b/CSS/index.css
@@ -39,7 +39,7 @@ body,
   height: 100%;
 }
 
-header::after {
+.layout::after {
   content: "";
   width: 90%;
   height: 1px;
@@ -260,6 +260,16 @@ button {
 .main__mobile-image-box {
   display: none;
 }
+
+.main__product-description {
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2rem;
+}
+
+.add-item-box {
+  width: 100%;
+}
 /* ------------------------ */
 
 /* ---Lightbox---- */
@@ -307,7 +317,7 @@ button {
 }
 
 .cart {
-  
+  box-shadow: 0px 0px 10px var(--clr-neutral-300);
 }
 
 .cart__checkout-btn {
@@ -321,8 +331,26 @@ button {
   cursor: pointer;
 }
 
+/* ---hover states---- */
+.user__img:hover {
+  border-radius: 160px;
+  outline: 2px solid var(--clr-primary-100);
+}
 
-/* -------- */
+.small-img:hover::before {
+  content: "FHFHFH";
+  display: inline;
+  position: absolute;
+  width: 100%;
+  background-color: red;
+  height: 100%;
+}
+
+.add-to-cart:hover {
+  background-color: var(--clr-primary-200);
+}
+
+/* ------- */
 
 /* ------------------------ */
 
