--- a/CSS/index.css
+++ b/CSS/index.css
@@ -264,7 +264,8 @@ button {
 .main__product-description {
   flex-direction: column;
   align-items: flex-start;
-  gap: 2rem;
+  gap: 1.5rem;
+  padding-inline: 3em;
 }
 
 .add-item-box {
@@ -298,10 +299,21 @@ button {
 
 /* ----Cart styling--- */
 .cart {
-  top: 90%;
-  padding: 1em 2em;
-  width: fit-content;
+  top: 120%;
+  padding: 1em 1em;
+  border-radius: 10px;
+  width: 22rem;
   right: 10%;
+  box-shadow: 0px 0px 10px var(--clr-neutral-300);
+}
+
+.cart > header::after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  display: block;
+  background-color: var(--clr-neutral-300);
+  margin: 1rem auto;
 }
 
 .add-to-cart {
@@ -314,10 +326,6 @@ button {
 .item-counter {
   justify-content: space-between;
   flex-grow: 1;
-}
-
-.cart {
-  box-shadow: 0px 0px 10px var(--clr-neutral-300);
 }
 
 .cart__checkout-btn {
@@ -348,6 +356,12 @@ button {
 
 .add-to-cart:hover {
   background-color: var(--clr-primary-200);
+}
+
+.cart__items > figure {
+  padding-inline: 1em;
+  gap: 1.3rem;
+  /* justify-content: space-between; */
 }
 
 /* ------- */
@@ -383,10 +397,14 @@ button {
     outline: 50vw solid var(--clr-neutral-600);
   }
   .cart {
-    width: 90%;
-    right: 5%;
+    width: 90vw;
+    top: 140%;
+    transform: translateX(3%);
   }
 
+  .cart__items > figure {
+    justify-content: space-between;
+  }
   .menu-close {
     background-image: url("../public/images/icon-close.svg");
   }
@@ -404,6 +422,9 @@ button {
     display: none;
   }
 
+  .main__product-description {
+    padding-block: 3rem 4rem;
+  }
   .next-btn {
     transform: translateX(-100%);
   }
