--- a/CSS/index.css
+++ b/CSS/index.css
@@ -9,9 +9,9 @@
   --clr-neutral-400: hsl(223, 64%, 98%);
   --clr-neutral-500: hsl(0, 0%, 100%);
   --clr-neutral-600: hsla(0, 3%, 7%, 0.726);
-  --fw-100: ;
-  --fw-200: ;
-  --fw-300: 400;
+  --fw-100: 400;
+  --fw-200: 400;
+  --fw-300: 700;
   --fw-400: 700;
 }
 
@@ -42,7 +42,7 @@ body {
 html,
 body,
 #root {
-  min-height: 100%;
+  height: 100%;
 }
 
 .layout > header::after {
@@ -119,9 +119,11 @@ button {
 }
 
 .fw-100 {
+  font-size: var(--fw-100);
 }
 
 .fw-200 {
+  font-weight: var(--fw-200);
 }
 
 .fw-300 {
@@ -402,6 +404,11 @@ button {
 /* ------------------------ */
 
 @media (max-width: 800px) {
+  html,
+  body,
+  #root {
+    min-height: 100%;
+  }
   header::after {
     display: none;
   }
