--- a/CSS/index.css
+++ b/CSS/index.css
@@ -41,8 +41,9 @@ body {
 
 html,
 body,
-#root {
-  height: 100%;
+#root,
+.layout {
+  min-height: 100vh;
 }
 
 .layout > header::after {
@@ -177,6 +178,7 @@ button {
   align-items: center;
   padding-block: 1em;
   padding-inline: 5%;
+  position: static;
 }
 
 .navbar__toggler {
@@ -407,7 +409,7 @@ button {
   html,
   body,
   #root {
-    min-height: 100%;
+    /* min-height: 100vh; */
   }
   header::after {
     display: none;
